fix: text aligns in top of poke info container

--- a/src/app/_components/quizContent/quizContent.css
+++ b/src/app/_components/quizContent/quizContent.css
@@ -23,22 +23,18 @@
 }
 
 .infoContainerHeader {
+    box-sizing: border-box;
     display: flex;
     justify-content: space-between;
     height: 20%;
-    width: 90%;
-    padding: 0 5%;
+    width: 100%;
+    padding: 2%;
 }
 
 .streaksContainer {
     display: flex;
     flex-direction: column;
-    padding: 15px;
     gap: 10px;
-    
-    p {
-        margin: 0;
-    }
 }
 
 .infoContainerContent {
